# saltengine_gui

./: Cargo.toml  build.sh
agent/: Cargo.toml
agent/src/: agent.rs  client.rs  godot_log.rs  gui_message.rs  hello.rs  lib.rs
card_instance/: Cargo.toml
card_instance/src/: lib.rs
godot_log/: Cargo.toml
godot_log/src/: lib.rs
hand/: Cargo.toml
hand/src/: lib.rs
saltgui/: Cargo.toml
saltgui/src/: board.rs  gui_mana_counter.rs  lib.rs  signal_manager.rs  textbox.rs
saltgui/src/agent/: agent.rs  bi_channel.rs  client.rs  godot_log.rs  gui_agent.rs  gui_message.rs  gui_notifier.rs  hello.rs  messages.rs  mod.rs  world.rs
saltgui/src/board_slot/: mod.rs
saltgui/src/card_board_instance/: mod.rs
saltgui/src/card_instance/: mod.rs
saltgui/src/end_turn_button/: mod.rs
saltgui/src/hand/: mod.rs
saltgui/src/util/: mod.rs
src/: agent.rs  client.rs  godot_log.rs  hello.rs  lib.rs
