[lib]
crate-type = ["cdylib"]

[package]
name = "hand"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9"
log = "0.4"
godot_log = { path = "../godot_log" }
card_instance = { path = "../card_instance" }
