[lib]
crate-type = ["cdylib"]

[package]
name = "saltgui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9"
salt_engine = { path = "../../SaltEngine/engine" }
websocket_server = { path = "../../SaltEngine/websocket_server" }
cards = { path = "../../SaltEngine/cards" }
websocket_client = { path = "../../SaltEngine/websocket_client" }
godot_log = { path = "../godot_log" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-tungstenite = { version = "0.14", features = ["async-std-runtime"] }
smol = "1.2.5"
futures = "0.3"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
crossbeam = "0.8"
async-trait = "0.1"
